
Package: PSCBS
==============

Version: 0.19.7 [2012-02-22]
o BUG FIX: segmentByCBS(..., knownSegments=knownSegments) would
  incorrectly throw a sanity-check exception if 'knownSegments'
  contains a segment with 'start' and 'stop' positions being equal.
o BUG FIX: Argument 'calls' of plotTracks() for PairedPSCBS was ignored
  if more than one chromosome was plotted.


Version: 0.19.6 [2012-01-24]
o ROBUSTNESS: Now getCallStatistics() for CBS asserts that calls have
  been made.  If not, an exception is thrown.


Version: 0.19.5 [2012-01-21]
o DOCUMENTATION: Added details to the help of callLOH() and callAB() on
  the difference between (AB,LOH)=(TRUE,FALSE) and (AB,LOH)=(TRUE,NA).
o Corrected some of verbose messages of estimateDeltaLOHByMinC1ForNonAB()
  for PairedPSCBS objects.


Version: 0.19.4 [2012-01-10]
o Now example(segmentByPairedPSCBS) and the system tests that are run
  by R CMD check are tuned to (by default) run much faster by segmenting
  using fewer data points and bootstrapping using fewer samples.  This
  update was done to meet the new CRAN policy.  By setting environment
  variable _R_CHECK_FULL_ to '1' the full data set is used instead.


Version: 0.19.3 [2012-01-09]
o ROBUSTNESS: Now extractSegments() for PairedPSCBS gives an informative
  error message that it is not supported if CNs were segmented using 
  flavor "tcn,dh".
o BUG FIX: postsegmentTCN() for PairedPSCBS could generate an invalid
  'tcnSegRows' matrix, where the indices for two consecutive segments
  would overlap, which is invalid.  Thanks to Minya Pu for reporting
  on failed sanity check related to this.


Version: 0.19.2 [2011-12-29]
o ROBUSTNESS: Explicitly added 'digest' to the list of suggested packages.


Version: 0.19.1 [2011-12-13]
o Added support for callGainsAndLosses(..., method="ucsf-dmad")
  of CBS objects.


Version: 0.19.0 [2011-12-12]
o Added optional argument 'indices' to getLocusData() to be able
  to retrieve the locus-level data as indexed by input data.